--- a/jaffle_shop/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -28,3 +28,9 @@ models:
                 - returned
                 - return_pending
                 - placed
+      - name: customer_id
+        description: Unique identifier for a customer
+        tests:
+           - relationships:
+              to: ref('stg_customers')
+              field: customer_id
