--- a/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/jaffle_shop/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -1,18 +1,23 @@
 version: 2
 sources:
   - name: jaffle_shop
+    description: a clone of a postgres application database
     database: database
     schema: raw
     tables:
       - name: customers
+        description: the raw customers data
         columns:
           - name: id
+            description: primary key for the raw customers data
             tests:
               - unique
               - not_null
       - name: orders
+        description: the raw orders data
         columns:
           - name: id
+            description: primary key for the raw orders data
             tests:
               - unique
               - not_null
